# kaleidoscope-cmake

./: CMakeLists.txt  ReadMe.md
include/: ast.h  codegen.h  kaleidoscope.h  lexer.h  parser.h  token.h  utils.h
src/: ast.cpp  codegen.cpp  lexer.cpp  parser.cpp  utils.cpp  utils.h
test/: CMakeLists.txt  test_lexer.cpp  test_parser.cpp  test_utils.h
tools/: main.cpp
